# business-cards

./: LICENSE  Makefile  ef-qr.py  pyproject.toml  rpoisel.vcf
